@@ -24,7 +24,9 @@ elseif (WIN32)
 	set(INSTALL_RES_DIR ".")
 endif (APPLE)
 
-if (CMAKE_BUILD_TYPE STREQUAL "Debug")
+set(RUN_FROM_BUILD_DIR OFF CACHE BOOL "Build executable which can be launched directly from build directory")
+
+if (RUN_FROM_BUILD_DIR)
 	set(PLUGINS_DIR "./plugins")
 	set(RESOURCES_DIR "${CMAKE_SOURCE_DIR}/resources")
 	set(TRANSLATIONS_DIR "./translations")
@@ -44,7 +46,7 @@ elseif (WIN32)
 	set(PLUGINS_DIR "./${INSTALL_LIB_DIR}/plugins")
 	set(RESOURCES_DIR "./${INSTALL_RES_DIR}/resources")
 	set(TRANSLATIONS_DIR "./${INSTALL_RES_DIR}/translations")
-endif (CMAKE_BUILD_TYPE STREQUAL "Debug")
+endif (RUN_FROM_BUILD_DIR)
 
 add_definitions(-DPLUGINS_DIR="${PLUGINS_DIR}")
 add_definitions(-DRESOURCES_DIR="${RESOURCES_DIR}")
