@@ -12,6 +12,8 @@
 #define DIR_BINARY                      "binary"
 #define FILE_PROFILE                    "profile.xml"
 #define FILE_OPTIONS                    "options.xml"
+#define FILE_OPTIONS_COPY               "options.xml.copy"
+#define FILE_OPTIONS_FAIL               "options.xml.fail"
 #define FILE_BLOCKER                    "blocked"
 
 #define PROFILE_VERSION                 "1.0"
@@ -220,11 +222,27 @@ bool OptionsManager::setCurrentProfile(const QString &AProfile, const QString &A
 			if (!profileDir.exists(DIR_BINARY))
 				profileDir.mkdir(DIR_BINARY);
 
+			// Loading options from file
 			QFile optionsFile(profileDir.filePath(FILE_OPTIONS));
 			if (!optionsFile.open(QFile::ReadOnly) || !FProfileOptions.setContent(optionsFile.readAll(),true))
 			{
-				FProfileOptions.clear();
-				FProfileOptions.appendChild(FProfileOptions.createElement("options")).toElement();
+				// Trying to open valid copy of options
+				optionsFile.close();
+				optionsFile.setFileName(profileDir.filePath(FILE_OPTIONS_COPY));
+				if (!optionsFile.open(QFile::ReadOnly) || !FProfileOptions.setContent(optionsFile.readAll(),true))
+				{
+					FProfileOptions.clear();
+					FProfileOptions.appendChild(FProfileOptions.createElement("options")).toElement();
+				}
+				// Renaming invalid options file
+				QFile::remove(profileDir.filePath(FILE_OPTIONS_FAIL));
+				QFile::rename(profileDir.filePath(FILE_OPTIONS),profileDir.filePath(FILE_OPTIONS_FAIL));
+			}
+			else
+			{
+				// Saving the copy of valid options
+				QFile::remove(profileDir.filePath(FILE_OPTIONS_COPY));
+				QFile::copy(profileDir.filePath(FILE_OPTIONS),profileDir.filePath(FILE_OPTIONS_COPY));
 			}
 			optionsFile.close();
 
@@ -447,8 +465,7 @@ QDialog *OptionsManager::showOptionsDialog(const QString &ANodeId, QWidget *APar
 		if (FOptionsDialog.isNull())
 		{
 			FOptionsDialog = new OptionsDialog(this,AParent);
-			connect(FOptionsDialog,SIGNAL(accepted()),SLOT(onOptionsDialogClosed()),Qt::QueuedConnection);
-			connect(FOptionsDialog,SIGNAL(rejected()),SLOT(onOptionsDialogClosed()),Qt::QueuedConnection);
+			connect(FOptionsDialog,SIGNAL(applied()),SLOT(onOptionsDialogApplied()),Qt::QueuedConnection);
 		}
 		FOptionsDialog->showNode(ANodeId);
 		WidgetManager::showActivateRaiseWindow(FOptionsDialog);
@@ -620,7 +637,7 @@ void OptionsManager::onOptionsChanged(const OptionsNode &ANode)
 	}
 }
 
-void OptionsManager::onOptionsDialogClosed()
+void OptionsManager::onOptionsDialogApplied()
 {
 	saveOptions();
 }
