@@ -6,6 +6,12 @@ LEGEND
   [-] Bug fix
 
 
+------
+  [+] Implemented backup settings and restore them automatically when the main file is damaged
+  [-] In the history view could appear duplicates of conversations
+  [-] Did not correctly handle changes in the participant's nickname when new nickname is already used by the same participant but from a different resource
+  [-] Fixed crash in Ubuntu 11.10 when alt key is pressed in chat window
+
 
 v1.1.1
 ------
